# uac-ai-parser

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: dev.yaml  local-llm.yaml  prod.yaml
docs/: WORKFLOWS.md
src/uac_ai_parser/: __init__.py  cli.py  config.py
src/uac_ai_parser/ai/: __init__.py  analyzer.py  llm.py  prompts.py  vectorstore.py
src/uac_ai_parser/core/: __init__.py  extractor.py  parser.py  preprocessor.py
src/uac_ai_parser/integrations/: __init__.py  plaso.py
src/uac_ai_parser/models/: __init__.py  analysis.py  artifacts.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_bodyfile.py  test_cli.py  test_config.py  test_extractor.py  test_parser.py  test_parsing.py  test_plaso.py  test_preprocessor.py
